test/test-cases/negative/block-errors.pas
Program id_errors(input, output);

Var 
  x : integer;
  y : real;
Function fun(a: bean, 123: char): integer;
Begin
End;

procedure emptyId();
begin
end;

begin
  emptyId(-);
  fun(x)
End.
